# Jump-Analysis

./: .gitignore  GoogleService-Info.plist  README.md  mocap_2d_vs_3d_orientation_summary.csv  mocap_front_37_features.csv  pyproject.toml  requirements.txt
.streamlit/: config.toml
AirPose/: AirPose.entitlements
AirPose.xcodeproj/: project.pbxproj
AirPose/App/: AirPoseApp.swift  AppTab.swift  FirebaseAppDelegate.swift  RootTabView.swift  TabRouter.swift
AirPose/Components/: AirPoseScrollCanvas.swift  BrandBackground.swift  CameraPreviewView.swift  GlassCard.swift  JumpCardView.swift  MetricTile.swift  PrimaryActionButton.swift  SectionHeader.swift
AirPose/Models/: AppSettings.swift  FirebaseUserSession.swift  Jump.swift  JumpAnalysisResponse.swift  (+1 more)
reports/: drop_jump_setup_and_protocol_report 2.md  jump_autoencoder_report.md  pitch_transformer_experiments.md  synthetic_data_report.md
scripts/: collect_jump_data.py  compare_mocap_2d_to_3d_orientation.py  convert_mocap_dataset.py  convert_mocap_knee_orientation.py  generate_anomalous_trials 2.py  generate_anomalous_trials.py  generate_mocap_sequences.py  generate_synthetic_collect_jump_trials.py  generate_synthetic_imu_drop_jumps.py  generate_synthetic_trials 2.py  generate_synthetic_trials.py  list_sensor_ports.py  main.py  render_jump_pitch_plot.py  streamlit_app.py  train_jump_autoencoder.py  train_pitch_transformer 2.py  train_pitch_transformer.py  validate_pitch_transformer.py
tests/: test_live_session.py  test_protocol_validation.py  test_service.py
tmp_synth_trials_check/: README.md
(+86 files in other folders)
